// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkInput with 4 default rows 1`] = `
<div>
  <span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-0"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-0"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-0"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue={undefined}
            id="test-url-0"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <span>
    <span>
      <hr
        styleName="hr"
      />
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-10"
        >
          <div
            className="question-heading"
          >
            Additional link (optional)
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-2"
        >
          <button
            className="button-secondary col-xs-12 col-sm-3"
            onClick={[Function]}
            styleName="remove-button"
            type="button"
          >
            Remove 
            <span
              className="visuallyhidden"
            >
              number 
              2
            </span>
          </button>
        </div>
      </div>
    </span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-1"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-1"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-1"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue={undefined}
            id="test-url-1"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <span>
    <span>
      <hr
        styleName="hr"
      />
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-10"
        >
          <div
            className="question-heading"
          >
            Additional link (optional)
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-2"
        >
          <button
            className="button-secondary col-xs-12 col-sm-3"
            onClick={[Function]}
            styleName="remove-button"
            type="button"
          >
            Remove 
            <span
              className="visuallyhidden"
            >
              number 
              3
            </span>
          </button>
        </div>
      </div>
    </span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-2"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-2"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-2"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue={undefined}
            id="test-url-2"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <span>
    <span>
      <hr
        styleName="hr"
      />
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-10"
        >
          <div
            className="question-heading"
          >
            Additional link (optional)
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-2"
        >
          <button
            className="button-secondary col-xs-12 col-sm-3"
            onClick={[Function]}
            styleName="remove-button"
            type="button"
          >
            Remove 
            <span
              className="visuallyhidden"
            >
              number 
              4
            </span>
          </button>
        </div>
      </div>
    </span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-3"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-3"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-3"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue={undefined}
            id="test-url-3"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button"
  >
    Add another link
  </button>
</div>
`;

exports[`LinkInput with 4 rows 1`] = `
<div>
  <span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-0"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-0"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-0"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue="One"
            id="test-url-0"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={Object {}}
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <span>
    <span>
      <hr
        styleName="hr"
      />
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-10"
        >
          <div
            className="question-heading"
          >
            Additional link (optional)
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-2"
        >
          <button
            className="button-secondary col-xs-12 col-sm-3"
            onClick={[Function]}
            styleName="remove-button"
            type="button"
          >
            Remove 
            <span
              className="visuallyhidden"
            >
              number 
              2
            </span>
          </button>
        </div>
      </div>
    </span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-1"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-1"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-1"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue="Two"
            id="test-url-1"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={Object {}}
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <span>
    <span>
      <hr
        styleName="hr"
      />
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-10"
        >
          <div
            className="question-heading"
          >
            Additional link (optional)
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-2"
        >
          <button
            className="button-secondary col-xs-12 col-sm-3"
            onClick={[Function]}
            styleName="remove-button"
            type="button"
          >
            Remove 
            <span
              className="visuallyhidden"
            >
              number 
              3
            </span>
          </button>
        </div>
      </div>
    </span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-2"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-2"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-2"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue="Three"
            id="test-url-2"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={Object {}}
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <span>
    <span>
      <hr
        styleName="hr"
      />
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-10"
        >
          <div
            className="question-heading"
          >
            Additional link (optional)
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-2"
        >
          <button
            className="button-secondary col-xs-12 col-sm-3"
            onClick={[Function]}
            styleName="remove-button"
            type="button"
          >
            Remove 
            <span
              className="visuallyhidden"
            >
              number 
              4
            </span>
          </button>
        </div>
      </div>
    </span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-3"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-3"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-3"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue="Four"
            id="test-url-3"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={Object {}}
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button"
  >
    Add another link
  </button>
</div>
`;

exports[`LinkInput with no props 1`] = `
<div>
  <span>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-10"
      >
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-title-0"
          >
            Link Title
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="title"
            defaultValue={undefined}
            id="test-title-0"
            name="test-title[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="test-url-0"
          >
            Link URL
          </label>
          <input
            aria-describedby={undefined}
            className="text-box "
            data-field="url"
            defaultValue={undefined}
            id="test-url-0"
            name="test-url[]"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "outline": "0",
              }
            }
            type="text"
          />
        </div>
      </div>
    </div>
  </span>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button"
  >
    Add another link
  </button>
</div>
`;
